--- a/src/pages/navbar/_navbar.scss
+++ b/src/pages/navbar/_navbar.scss
@@ -1,3 +1,199 @@
-div{
-    background-color: beige;
+@import '../../assets/styles/variables';
+
+.my-navbar {
+    position: relative;
+    height: 3rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 2rem;
+    background-color: $white;
+
+    .menu-desktop {
+        height: 100%;
+
+        ul {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            list-style: none;
+            display: flex;
+            flex-direction: row;
+            font-size: 1rem;
+            gap: 2rem;
+
+            li {
+                position: relative;
+                padding: 0rem 1rem;
+                display: flex;
+                align-items: center;
+                transition: all 300ms ease;
+            }
+
+            li::before,
+            li::after {
+                content: '';
+                height: 1rem;
+                width: 1rem;
+                position: absolute;
+                transition: all 300ms ease;
+                opacity: 0;
+            }
+
+            li::before {
+                content: '';
+                right: 5px;
+                top: 5px;
+                border-top: 3px solid $grey;
+                border-right: 3px solid $grey;
+                transform: translate(-100%, 50%);
+            }
+
+            li::after {
+                content: '';
+                left: 5px;
+                bottom: 5px;
+                border-bottom: 3px solid $grey;
+                border-left: 3px solid $grey;
+                transform: translate(100%, -50%)
+            }
+
+            li:hover::before,
+            li:hover::after {
+                transform: translate(0, 0);
+                opacity: 1;
+            }
+
+            li:hover {
+                color: $grey;
+                cursor: pointer;
+            }
+        }
+    }
+
+    .menu-mobile {
+        .hamburger-icon {
+            display: flex;
+            flex-direction: column;
+            width: 40px;
+            cursor: pointer;
+
+            span {
+                background: $black;
+                border-radius: 10px;
+                height: 4px;
+                margin: 4px 0;
+                transition: 300ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
+            }
+
+            span:nth-of-type(1) {
+                width: 50%;
+            }
+
+            span:nth-of-type(2) {
+                width: 100%;
+            }
+
+            span:nth-of-type(3) {
+                width: 75%;
+            }
+        }
+
+        .hamburger-icon.is-open {
+            span:nth-of-type(1) {
+                transform-origin: bottom;
+                transform: rotatez(45deg) translate(4px, 0px)
+            }
+
+            span:nth-of-type(2) {
+                transform-origin: top;
+                transform: rotateZ(-45deg)
+            }
+
+            span:nth-of-type(3) {
+                transform-origin: bottom;
+                width: 50%;
+                transform: translate(18px, -6px) rotateZ(45deg);
+            }
+        }
+    }
+
+    .menu-mobile-dropdown.is-open {
+        transform: scaleY(1);
+    }
+
+    .menu-mobile-dropdown {
+        padding: 2rem 0;
+        transform: scaleY(0);
+        transform-origin: top;
+        transition: transform 300ms;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        width: 100%;
+        top: 100%;
+        left: 0;
+        background-color: $white;
+
+        ul {
+            margin: 0;
+            padding: 0;
+            list-style: none;
+            display: flex;
+            flex-direction: column;
+            font-size: 1.5rem;
+            gap: 1rem;
+
+            li {
+                padding: 1rem 1rem;
+                position: relative;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                transition: all 300ms ease;
+            }
+
+            li::before,
+            li::after {
+                content: '';
+                height: 1rem;
+                width: 1rem;
+                position: absolute;
+                transition: all 300ms ease;
+                opacity: 0;
+            }
+
+            li::before {
+                content: '';
+                right: 5px;
+                top: 5px;
+                border-top: 3px solid $grey;
+                border-right: 3px solid $grey;
+                transform: translate(-100%, 50%);
+            }
+
+            li::after {
+                content: '';
+                left: 5px;
+                bottom: 5px;
+                border-bottom: 3px solid $grey;
+                border-left: 3px solid $grey;
+                transform: translate(100%, -50%)
+            }
+
+            li:hover::before,
+            li:hover::after {
+                transform: translate(0, 0);
+                opacity: 1;
+            }
+
+            li:hover {
+                color: $grey;
+                cursor: pointer;
+            }
+        }
+    }
 }
