--- a/src/assets/styles/_index.scss
+++ b/src/assets/styles/_index.scss
@@ -2,12 +2,11 @@
 @import './variables';
 
 @import '../../pages/navbar/navbar';
+@import '../../pages/home/home';
 
 body{
     margin: 0;
     padding: 0;
-
-    background-color: $grey;
 }
 
 
