--- a/src/assets/fonts/_fonts.scss
+++ b/src/assets/fonts/_fonts.scss
@@ -1,10 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap');
 
 body {
     $fontThin: 300;
     $fontNormal: 400;
     $fontBold: 700;
+    $fontBigBold: 900;
+
+    $fontSize: calc(16px + 0.4vw);
 
     @mixin fontSpecial {
         font-weight: 700;
@@ -22,7 +25,18 @@ body {
         font-weight: $fontBold;
     }
 
+    .f-b-bold{
+        font-weight: $fontBigBold;
+    }
+
     .f-thin{
         font-weight: $fontThin;
+    }
+
+    h1{
+        font-size: calc(4 *$fontSize);
+    }
+    h2{
+        font-size: calc(1 *$fontSize);
     }
 }
