--- a/src/pages/home/_home.scss
+++ b/src/pages/home/_home.scss
@@ -11,6 +11,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    gap: 2rem;
     min-height: calc(100vh - 3rem);
     z-index: 2;
 
@@ -18,7 +19,7 @@
         flex: 2;
 
         h1,
-        h2,
+        h3,
         .icon {
             background-color: $whiteTransparent;
             border-radius: 20px;
@@ -27,7 +28,7 @@
             user-select: none;
         }
 
-        h2 {
+        h3 {
             //width: 80%;
             color: $grey;
         }
@@ -101,7 +102,7 @@
             justify-content: center;
 
             h1,
-            h2 {
+            h3 {
                 text-align: center;
             }
         }
