--- a/src/pages/home/_home.scss
+++ b/src/pages/home/_home.scss
@@ -88,7 +88,7 @@
             max-height: 400px;
             max-width: 100%;
             border-bottom: 3px solid $black;
-            filter: drop-shadow(0px -10px 10px $grey) brightness(1.75);
+            filter: brightness(1.75);
         }
     }
 
