--- a/src/pages/home/_home.scss
+++ b/src/pages/home/_home.scss
@@ -100,6 +100,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            margin-bottom: 3rem;
 
             h1,
             h3 {
