project section layout v1

--- a/src/assets/fonts/_fonts.scss
+++ b/src/assets/fonts/_fonts.scss
@@ -41,10 +41,12 @@ body {
 
     h2 {
         font-size: calc(2 *$fontSize);
+        margin-bottom: 2rem;
     }
 
     h3 {
         font-size: calc(1 *$fontSize);
+        margin-bottom: 2rem;
     }
 
     span {
