--- a/src/assets/styles/_index.scss
+++ b/src/assets/styles/_index.scss
@@ -4,6 +4,7 @@
 @import '../../pages/navbar/navbar';
 @import '../../pages/home/home';
 @import '../../pages//about/about';
+@import '../../pages/projects/projects';
 
 body {
     margin: 0;
