--- a/src/assets/styles/_index.scss
+++ b/src/assets/styles/_index.scss
@@ -5,6 +5,25 @@
 @import '../../pages/home/home';
 @import '../../pages//about/about';
 @import '../../pages/projects/projects';
+@import '../../pages/contact/contact';
+@import '../../pages/footer/footer';
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: $grey;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: $black;
+}
+
+::-webkit-scrollbar-track {
+    background-color: $white;
+}
+
 
 body {
     margin: 0;
