--- a/src/pages/projects/_projects.scss
+++ b/src/pages/projects/_projects.scss
@@ -16,7 +16,14 @@
         margin-bottom: 3rem;
     }
 
-    .project:nth-of-type(odd) {
+    .projects {
+        .project:last-child {
+            margin-bottom: 3rem;
+        }
+
+    }
+
+    .project:nth-of-type(even) {
         display: flex;
         flex-direction: row-reverse;
     }
@@ -58,6 +65,7 @@
             align-items: center;
             justify-content: space-around;
             flex-direction: column;
+            text-align: center;
             flex: 1;
 
             h3 {
@@ -106,7 +114,7 @@
         }
 
         @media (max-width: 767.98px) {
-            flex-direction: column;
+            flex-direction: column !important;
             height: auto;
 
             .photo {
@@ -119,7 +127,7 @@
         display: flex;
         justify-content: center;
 
-        a{
+        a {
             color: inherit;
         }
     }
