--- a/src/assets/styles/_index.scss
+++ b/src/assets/styles/_index.scss
@@ -30,7 +30,7 @@ body {
     padding: 0;
 
     .spacer {
-        margin-bottom: 15vh;
+        margin-bottom: 30vh;
     }
 
     @media (max-width: 767.98px) {
@@ -39,3 +39,46 @@ body {
         }
     }
 }
+
+// @keyframes text-in {
+//     0% {
+//         letter-spacing: -0.5em;
+//         transform: translateX(200px);
+//         opacity: 0;
+//       }
+//       100% {
+//         transform: translateX(0);
+//         opacity: 1;
+//       }
+// }
+// @keyframes text-in-rwd {
+//     0% {
+//         letter-spacing: -0.5em;
+//         transform: translateY(-100px);
+//         opacity: 0;
+//       }
+//       100% {
+//         transform: translateY(0);
+//         opacity: 1;
+//       }
+// }
+// @keyframes avatar-in {
+//     0% {
+//         transform: translateX(-200px);
+//         opacity: 0;
+//       }
+//       100% {
+//         transform: translateX(0);
+//         opacity: 1;
+//       }
+// }
+// @keyframes avatar-in-rwd {
+//     0% {
+//         transform: translateY(-100px);
+//         opacity: 0;
+//       }
+//       100% {
+//         transform: translateY(0);
+//         opacity: 1;
+//       }
+// }
