--- a/src/pages/contact/_contact.scss
+++ b/src/pages/contact/_contact.scss
@@ -3,19 +3,23 @@
 .my-contact {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
 
     .wrapper {
         max-width: clamp(10rem, 28rem, 50%);
 
+        h2{
+            text-align: center;
+        }
         h3 {
             color: $grey;
+            text-align: center;
         }
 
         .icon {
             font-size: 3rem;
             display: flex;
-            justify-content: flex-start;
+            justify-content: center;
 
             svg{
                 transition: all 300ms;
