--- a/src/pages/home/_home.scss
+++ b/src/pages/home/_home.scss
@@ -17,6 +17,7 @@
 
     .home {
         flex: 2;
+        //animation: text-in 1s ease-in forwards;
 
         h1,
         h3,
@@ -29,7 +30,6 @@
         }
 
         h3 {
-            //width: 80%;
             color: $grey;
         }
 
@@ -76,13 +76,17 @@
                 svg:hover {
                     transform: scale(1.5);
                 }
-            }
 
+                @media (max-width: 767.98px) {
+                    justify-content: center;
+                }
+            }
         }
     }
 
     .avatar {
         flex: 1;
+        //animation: avatar-in 1s ease-in forwards;
 
         img {
             max-height: 400px;
@@ -101,6 +105,7 @@
             align-items: center;
             justify-content: center;
             margin-bottom: 3rem;
+            //animation: text-in-rwd 1s ease-in forwards;
 
             h1,
             h3 {
@@ -112,6 +117,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            //animation: avatar-in-rwd 1s ease-in forwards;
 
             img {
                 margin-top: 3rem;
@@ -135,5 +141,4 @@
             }
         }
     }
-
 }
